# devdash

./: .gitignore  README.md  config.example.yaml  pyproject.toml  requirements.txt  setup.sh
devdash/: __init__.py  __main__.py  config.py  database.py  main.py
devdash/hardware/: button.py  buzzer.py  leds.py  voice_input.py
devdash/screens/: base.py  ci_diagnosis.py  context_chat.py  conversation.py  deploy.py  home.py  pr_triage.py  standup.py
devdash/services/: copilot_service.py  github_service.py  system_service.py  voice_service.py
devdash/ui/: animations.py  mona.py  renderer.py  screen_manager.py  theme.py  touch.py  widgets.py
systemd/: devdash.service
