[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "devdash"
version = "0.2.0"
description = "Voice-first AI Raspberry Pi developer companion using GitHub Copilot SDK"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "pygame>=2.5.0",
    "PyYAML>=6.0",
    "aiohttp>=3.9.0",
    "PyGithub>=2.1.0",
    "github-copilot-sdk>=0.1.0",
    "aiosqlite>=0.19.0",
    "python-dateutil>=2.8.0",
    "faster-whisper>=1.0.0",
    "sounddevice>=0.4.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools.packages.find]
include = ["devdash*"]
